# QvPlugin-Netfilter

./: .gitignore  .gitmodules  CMakeLists.txt  NetfilterPlugin.cpp  NetfilterPlugin.hpp  README.md
.github/workflows/: build-simpleplugin-qt6.yml  build.yml
core/: EventHandler.cpp  EventHandler.hpp  Settings.hpp
netfilter/: NFEventHandler.cpp  NFEventHandler.hpp  SOCKS.h  SocksRedirector.cpp  SocksRedirector.hpp  UDPContext.hpp  UDPProxy.cpp  UTF-8.h  UdpProxy.h  base.h  iocp.h  linkedlist.h  sync.h  threadpool.h
netfilter/include/: nfapi.h  nfapi_linux.h  nfapi_macos.h
netfilter/lib/Debug/: nfapi.exp  nfapi.lib
netfilter/lib/Release/: nfapi.exp  nfapi.lib
ui/: Interface.hpp  PluginMainWindowWidget.cpp  PluginMainWindowWidget.hpp  PluginMainWindowWidget.ui  PluginSettingsWidget.cpp  PluginSettingsWidget.hpp  PluginSettingsWidget.ui
